--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,6 @@ bs58 = "0.4.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 spl-token-client = "0.4.0"
-hyper = {version = "0.14.24", features = ["server"]}
+spl-token = "3.2.0"
+hyper = {version = "0.14.24", features = ["full"]}
+tokio = {version = "1.14.0", features = ["full"]}
