--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,4 +14,7 @@ serde_json = "1.0"
 spl-token-client = "0.4.0"
 spl-token = "3.2.0"
 hyper = {version = "0.14.24", features = ["full"]}
+hyper-tls = "0.5.0"
 tokio = {version = "1.14.0", features = ["full"]}
+tokio-rustls = "0.23.4"
+rustls-pemfile = "1.0.2"
